[project]
name = "hamiltonian"
version = "0.1.0"
description = ""
authors = [{ name = "Victor S. Miller", email = "victorsmiller@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.4.2,<4",
    "graphillion",
    "python-sat~=1.8.dev13",
]

[project.scripts]
tours = "hamiltonian.run:run"

[dependency-groups]
dev = ["pytest>=5.2"]

[tool.uv]

[tool.uv.sources]
graphillion = { git = "https://github.com/takemaru/graphillion.git", rev = "v2.0rc0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
