[project]
name = "hamiltonian"
version = "0.1.0"
description = ""
authors = [{ name = "Victor S. Miller", email = "victorsmiller@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.4.2,<4",
    "graphillion",
    "python-sat~=1.8.dev13",
    "separation",
    "cffi>=2.0.0",
    "matplotlib>=3.10.8",
    "pyyaml>=6.0.3",
]

[project.scripts]
tours = "hamiltonian.run:run_tours"
write = "hamiltonian.run:write_graph"
count = "hamiltonian.claude.ham_count:main"

[dependency-groups]
dev = ["pytest>=5.2"]

[tool.uv]

[tool.uv.sources]
graphillion = { git = "https://github.com/takemaru/graphillion.git", rev = "v2.0rc0" }
separation = { git = "https://github.com/algebravic/separation.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
